# saber-interactive-test-tasks

./: CMakeLists.txt  README.md
include/: BinaryRepresentation.h  RemovingDuplicates.h  Serialization.h
src/: RemovingDuplicates.cpp  Serialization.cpp  main.cpp
test/: CMakeLists.txt
test/src/: BinaryRepresentationTest.cpp  RemovingDuplicatesTest.cpp  SerializationTest.cpp
